--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
+
 <html>
 <head>
-<title></title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>Spoon-Knife</title>
+  <LINK href="styles.css" rel="stylesheet" type="text/css">
 </head>
+
 <body>
-&lt;?php<br/>
-include &#39;ip.php&#39;;<br/>
-header(&#39;Location: login.html&#39;);<br/>
-exit<br/>
-?&gt;</body></html>
+
+<img src="forkit.gif" id="octocat" alt="" />
+
+<!-- Feel free to change this text here -->
+<p>
+  Fork me? Fork you, @octocat!
+</p>
+<p>
+  Sean made a change
+</p>
+
+</body>
+</html>
+
